data/derived/comb/progs/unify/prog3353.ml.out
Characters 71-79:
  n mod 10 @myList;;
  ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
